[tool.poetry]
name = "rialto"

version = "2.0.8"

packages = [
    { include = "rialto" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
description = "Rialto is a framework for building and deploying machine learning features in a scalable and reusable way. It provides a set of tools that make it easy to define and deploy features and models, and it provides a way to orchestrate the execution of these features and models."
authors = ["Marek Dobransky <marekdobr@gmail.com>", "Vladislav Vancak <vladislav.vancak@gmail.com>"]

readme = "README.md"
keywords = ["feature", "featureslib", "featuremaker", "metadata", "featureloader", "loader"]
documentation = "https://absaoss.github.io/rialto/"
repository = "https://github.com/AbsaOSS/rialto"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = "^2.2.1"
pathlib = "^1.0.1"
pyyaml = "^6.0.1"
delta-spark = "^2.4.0"
python-dateutil = "^2.8.2"
pytest-mock = "^3.11.1"
pandas = "^2.1.0"
flake8-broken-line = "^1.0.0"
loguru = "^0.7.2"
importlib-metadata = "^7.2.1"
numpy = "<2.0.0"

[tool.poetry.dev-dependencies]
pyspark = "^3.4.1"
chispa = "^0.9.2"
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
pep8-naming = "^0.13.3"
pre-commit = "^3.4.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-mdinclude = "^0.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
